# bevy_pipe_affect

./: CHANGELOG.md  CNAME  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  index.html  mvp-effects.md  release-please-config.json  rustfmt.toml
.github/workflows/: ci.yaml  publish-book.yml  release-please.yml
book/: book.toml
book/src/: README.md  SUMMARY.md  api-reference.md  blurb.md  other-versions.md
book/src/explanation/: motivation-and-theory.md  motivations.md  output-and-effect-composition.md
book/src/how-to-guides/: spawn-a-relationship-synchronously.md  spawn-and-trigger-an-observer.md
effect_derive/: Cargo.toml
effect_derive/src/: affect_calls.rs  affect_fn.rs  destructure.rs  effect_tuple.rs  generics.rs  lib.rs  mut_param_type.rs
examples/: README.md  effect-composition.rs  rainbow-clear-color.rs  relationship.rs
examples/observer/: inflatable.rs  main.rs
examples/sokoban/: animate.rs  main.rs  player.rs  push.rs  setup.rs
latest/: index.html  print.html  searchindex.js
latest/explanation/: output-and-effect-composition.html
main/: 404.html  api-reference.html  index.html  other-versions.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
main/explanation/: motivations.html  output-and-effect-composition.html
main/how-to-guides/: spawn-a-relationship-synchronously.html  spawn-and-trigger-an-observer.html
src/: effect.rs  effect_composition.rs  effect_out.rs  lib.rs  main.rs  prelude.rs  query_data_effect.rs  resource_effects.rs  system_combinators.rs
src/effect/: effect.rs  mod.rs  resource.rs
src/effects/: algebra.rs  asset.rs  asset_server.rs  command.rs  components.rs  defer_command_note.md  entity_command.rs  entity_components.rs  error.rs  event.rs  iter.rs  local.rs  message.rs  mod.rs  number_data.rs  one_way_fn.rs  query.rs  query_entity.rs  resource.rs  system.rs  variadic.rs
src/query_data_effect/: algebra.rs  components.rs  mod.rs  query_data_effect.rs
src/query_data_effects/: algebra.rs  components.rs  mod.rs
tests/: derive_compilation.rs  effect-testing.rs
v0.1.0/: index.html
v0.2.0/: api-reference.html  toc.html
v0.2.0/explanation/: motivations.html  output-and-effect-composition.html
v0.2.0/how-to-guides/: spawn-and-trigger-an-observer.html
v0.3.0/: toc.js
v0.3.0/how-to-guides/: spawn-and-trigger-an-observer.html
v0.4.0/: print.html
v0.4.0/how-to-guides/: spawn-a-relationship-synchronously.html
