[package]
name = "bevy_pipe_affect"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["effect_derive"]

[dependencies]
bevy = { version = "0.17.3", default-features = false }
variadics_please = "1.1.0"
either = "1.15.0"
bevy_pipe_affect_derive = { version = "0.1.0", path = "effect_derive", optional = true }

[dev-dependencies]
bevy = { version = "0.17.3", default-feature = true }
proptest = "1.8.0"
proptest-derive = "0.6.0"
blake2 = "0.10.6"

[features]
derive = ["bevy_pipe_affect_derive"]
asset_server = ["bevy/bevy_asset"]

[[example]]
name = "relationship"
required-features = ["asset_server"]
