[package]
name = "bevy_pipe_affect"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["effect_derive"]

[dependencies]
bevy = { version = "0.17.3", default-features = false }
bevy_pipe_affect_derive = { version = "0.1.0", path = "effect_derive", optional = true }

# bevy with no default features actually depends on both of these, no need to hide them behind flags
variadics_please = "1.1.0"
either = "1.15.0"

[dev-dependencies]
bevy = { version = "0.17.3" }
proptest = "1.8.0"
proptest-derive = "0.6.0"
blake2 = "0.10.6"

[features]
derive = ["bevy_pipe_affect_derive"]
asset_server = ["bevy/bevy_asset"]

[[example]]
name = "relationship"
required-features = ["asset_server"]
