[package]
name = "bevy_pipe_affect"
description = "Write systems as pure functions."
version = "0.2.0"
edition = "2024"
authors = ["Trevor Lovell <trevorlovelldesign@gmail.com>"]
repository = "https://github.com/Trouv/bevy_pipe_affect"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "game", "gamedev"]
categories = ["game-development"]
exclude = ["assets/", "ci/", ".github/"]

[workspace]
members = ["effect_derive"]

[dependencies]
bevy = { version = "0.18.0", default-features = false }
bevy_pipe_affect_derive = { version = "0.2.0", path = "effect_derive", optional = true }

# bevy with no default features actually depends on both of these, no need to hide them behind flags
variadics_please = "1.1.0"
either = "1.15.0"

[dev-dependencies]
bevy = { version = "0.18.0" }
proptest = "1.8.0"
proptest-derive = "0.6.0"
blake2 = "0.10.6"

[features]
derive = ["bevy_pipe_affect_derive"]
asset_server = ["bevy/bevy_asset"]

[[example]]
name = "relationship"
required-features = ["asset_server"]

[[example]]
name = "observer"
required-features = ["asset_server"]

[package.metadata.docs.rs]
all-features = true
