[package]
name = "bevy_pipe_affect_derive"
description = "Effect derive macro for bevy_pipe_affect."
version = "0.2.0"
edition = "2024"
authors = ["Trevor Lovell <trevorlovelldesign@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["bevy", "game", "gamedev"]
categories = ["game-development"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
